# saas-analytics

./: .env.example  .gitignore  ARCHITECTURE.md  QUICKSTART.md  README.md  connector-config.json  docker-compose.yml  init.sql  requirements.txt  setup.sh
airflow/: Dockerfile  requirements.txt
airflow/dags/: dbt_transformation_dag.py  event_ingestion_dag.py  tenant_provisioning_dag.py
airflow_home/: Dockerfile  README.html  README.md  requirements.txt
airflow_home/.astro/: config.yaml
airflow_home/dags/: dbt_dag.py
api/: Dockerfile  event_consumer.py  event_producer.py  guest_token_service.py  main.py  requirements.txt  schemas.py  tenant_service.py
app/: embedded_analytics_server.py  event_consumer.py  event_generator.py
app/monitoring/: metrics_exporter.py
app/templates/: analytics.html
dags/: README.md  analytics_pipeline.py  pyproject.toml
dags/dbt_ingest/: .user.yml  dbt_project.yml  profiles.yml
dags/dbt_ingest/models/: schema.yml
dags/dbt_ingest/models/staging/: stg_events.sql
db/: setup-rls.sql
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: tenant_filter.sql
dbt/models/: schema.yml
dbt/models/marts/: dim_tenants.sql  fct_usage_events.sql
dbt/models/staging/: stg_events.sql  stg_tenants.sql
event_producer/: producer.py
postgres/init/: 01_init_db.sql
saas_analytics/: dbt_project.yml  profiles.yml
saas_analytics/models/: schema.yml
saas_analytics/models/marts/: fct_daily_usage.sql  (+1 more)
scripts/: setup_all.sh  test_tenant_isolation.py
superset/: Dockerfile  superset_config.py
superset/security/: rls_manager.py
(+5 files in other folders)
