[project]
name = "dags"
requires-python = ">=3.9,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.12.1",
    "dagster-dbt>=0.28.1",
    "dbt-core>=1.10.13",
    "dbt-duckdb>=1.10.0",
    "dbt-postgres>=1.9.1",
    "duckdb>=1.4.1",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dags"
registry_modules = [
    "dags.components.*",
]


